Overflow correction

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,9 +5,6 @@
   color: #fff;
   margin: 40px auto 51px;
   align-items: center;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .profile__image {
